# ozon_worker

./: .gitignore  README.md  pyproject.toml
worker/: main.py
worker/config/: __init__.py  config.py
worker/db/: __init__.py  repository.py  tables.py
worker/schema/: __init__.py  schema.py
